Handle lookup of application version of direct deployments